--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to AirENE</title>
+        <title>Welcome to Airbnb</title>
+		<link href="CSS/style.css" type="text/css" rel="stylesheet"/>
+	
     </head>
     <body>
         <div id="search">
+            <div id="mag"><img src="images/icons/magnifier.png" width="98" height="102" alt=""/>
+              <div id="filter"><img src="images/icons/filter.png" width="122" height="94" alt=""/></div>
+            </div>
             <h4>Where to?</h4>
             <h5>Anywhere ∙ Any week ∙ Add guests</h5>
         </div>
 		<div id="categories">
-			<div id="icons">Icons</div>
-            <div id="beachfront">Beachfront</div>
-            <div id="cabins">Cabins</div>
-            <div id="omg">OMG!</div>
-			<div id="lake">Lake</div>
-			<div id="camping">Camping</div>
+			<div id="icons"><img src="images/icons/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" width="96" height="96" alt=""/>Icons</div>
+            <div id="beachfront"><img src="images/icons/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" width="96" height="96" alt=""/>Beachfrontx</div>
+            <div id="cabins"><img src="images/icons/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg" width="96" height="96" alt=""/>Cabins</div>
+            <div id="omg"><img src="images/icons/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" width="96" height="96" alt=""/>OMG!</div>
+			<div id="lake"><img src="images/icons/a4634ca6-1407-4864-ab97-6e141967d782.jpg" width="96" height="96" alt=""/>Lake</div>
+			<div id="camping"><img src="images/icons/ca25c7f3-0d1f-432b-9efa-b9f5dc6d8770.jpg" width="96" height="96" alt=""/>Camping</div>
 		</div>
 		
 		<!-- images -->
-		<div id="pictures">
+		<div class="pictures">
 			<div id="image1">
 				<div id=image>
 				</div>
