--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     </head>
     <body>
         <div id="search">
-            <div id="mag"><img src="images/icons/magnifier.png" width="98" height="102" alt=""/>
-              <div id="filter"><img src="images/icons/filter.png" width="122" height="94" alt=""/></div>
-            </div>
-            <h4>Where to?</h4>
-            <h5>Anywhere ∙ Any week ∙ Add guests</h5>
-        </div>
+			<div id="mag"><img src="images/icons/magnifier.png" alt="" class="magimage"/>
+			</div>
+		<div>
+			<h4>Where to?</h4>
+		    <li>Anywhere ∙ Any week ∙ Add guests<li>
+		</div>
+				<div class="filter"><img src="images/icons/filter.png" alt="" class="filterimage"/>
+			</div>
+			
+		</div>
 		<div id="categories">
 			<div id="icons"><img src="images/icons/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" width="96" height="96" alt=""/>Icons</div>
             <div id="beachfront"><img src="images/icons/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" width="96" height="96" alt=""/>Beachfrontx</div>
