--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
 	
     </head>
     <body>
-        <div id="search">
-			<div id="mag"><img src="images/icons/magnifier.png" alt="" class="magimage"/>
+		<div class="content">
+			<div class="content1">
+				<div><img src="images/icons/magnifier.png" alt="" class="mag"></div>
+				<div><img src="images/icons/filter.png" alt="" class="filter"></div>
+				<div class=search2><span class="where">Where to?</span><br><span class="under-where">Anywhere ∙ Any week ∙ Add guests</span></div>	
 			</div>
-		<div>
-			<h4>Where to?</h4>
-		    <li>Anywhere ∙ Any week ∙ Add guests<li>
-		</div>
-				<div class="filter"><img src="images/icons/filter.png" alt="" class="filterimage"/>
-			</div>
-			
-		</div>
 		<div id="categories">
 			<div id="icons"><img src="images/icons/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" width="96" height="96" alt=""/>Icons</div>
             <div id="beachfront"><img src="images/icons/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" width="96" height="96" alt=""/>Beachfrontx</div>
@@ -200,6 +195,8 @@
 		<div id="fo2">£ GBP</div>
 		<div id="fo3">©2024 Airbnb, Inc. Privacy ∙ Terms ∙ Sitemap ∙ UK Modern Slavery Act ∙ Company details</div>
 		
+	</div>
+	</div>
 	</div>
 	</body>
 </html>
